docs/src/ch16_e4.txt
$ cppcheck --enable=all ch16_e4.c --suppress=missingIncludeSystem
Checking ch16_e4.c ...
ch16_e4.c:9:5: error: Memory leak: p [memleak]
    p = NULL;
    ^

------------------------------------------------------------------

$ gcc -g ch16_e4.c -o ch16_e4
$ valgrind ./ch16_e4
==64== Memcheck, a memory error detector
==64== Copyright (C) 2002-2022, and GNU GPL'd, by Julian Seward et al.
==64== Using Valgrind-3.21.0 and LibVEX; rerun with -h for copyright info
==64== Command: ./ch16_e4
==64==
==64==
==64== HEAP SUMMARY:
==64==     in use at exit: 0 bytes in 0 blocks
==64==   total heap usage: 1 allocs, 1 frees, 4 bytes allocated
==64==
==64== All heap blocks were freed -- no leaks are possible
==64==
==64== For lists of detected and suppressed errors, rerun with: -s
==64== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)